--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         together, amen <br>
         but i can't wait to see you again, hooray <br>
         i love you so much, happpy ten!<br>
-        kristian  10/09/25
+        kristian
       </p>
       <!-- Bottom heart -->
       <img src="heart.png" alt="close heart" class="close-heart" id="closeHeart">
