--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <p id="message">
         dear Leia,<br>
         my love grows for you every day <br>
-        and my heart yearns for you each day we're not
+        and my heart yearns for you each day we are not
         together, amen <br>
-        but i can't wait to see you again, hooray <br>
-        i love you so much, happpy ten!<br>
-        kristian
+        but i cannot wait to see you again, hooray <br>
+        i love you so much, happy ten!<br>
+        kristian (10/09/25)
       </p>
       <!-- Bottom heart -->
       <img src="heart.png" alt="close heart" class="close-heart" id="closeHeart">
